# UAV-ARM-XJTU-Project

./: README.md
UAV-ARM-control/: CMakeLists.txt  package.xml  readme.md
UAV-ARM-control/scripts/: cycle_control.py  moveit_ik_demo.py
UAV-ARM-control/src/: control_in_set_mode.cpp  my_arm_control.cpp  space_to_move.cpp
UAV-ARM-moveit/: CMakeLists.txt  package.xml  readme.md
UAV-ARM-moveit/config/: arm.yaml  controllers.yaml  joint_limits.yaml
UAV-ARM-moveit/launch/: my_launch.launch
UAV-ARM-moveit/model/pincherarmrobot/: CMakeLists.txt  package.xml  urdf.rviz
UAV-ARM-moveit/model/pincherarmrobot/config/: joint_names_pincherarmrobot.yaml
UAV-ARM-moveit/model/pincherarmrobot/launch/: display.launch  gazebo.launch
UAV-ARM-moveit/model/pincherarmrobot/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  Link_7.STL  Link_8.STL  base_link.STL
UAV-ARM-moveit/model/pincherarmrobot/srdf/: pincherarmrobot.srdf
UAV-ARM-moveit/moveit/: move_group.launch  ompl_planning_pipeline.launch.xml  pincherarmrobot_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  trajectory_execution.launch.xml
UAV-ARM-moveit/rviz/: moveit.rviz
dji_sdk/launch/: sdk.launch
my_flight_demo/: CMakeLists.txt
my_flight_demo/include/my_flight_demo/: common.h  flight_control.h  pid.h
my_flight_demo/scripts/: key_test.py  keyboard.py
my_flight_demo/src/: detect_node.cpp  fixed_height_test.cpp  hover.cpp  keyboard_control.cpp  offset_node.cpp  print_test.cpp  test.cpp  velocity_node.cpp
(+1 files in other folders)
